--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
 body{
     font-family: Verdana;
 }
+
+.btn {
+    border: 4px solid;
+    border-radius: 5px;
+
+    transition-property: transform;
+    transition-duration: 0.3s;
+    transition-timing-function: ease;
+    transition-delay: 0s;
+}
+
+.btn:hover {
+    transform: translateY(-10px);
+}
